Realty Service and Repository

--- a/src/rental.WebAPI/rental.WebAPI.csproj
+++ b/src/rental.WebAPI/rental.WebAPI.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\rental.Domain\rental.Domain.csproj" />
+    <ProjectReference Include="..\rental.Persistence\rental.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
