--- a/src/rental.WebAPI/appsettings.Development.json
+++ b/src/rental.WebAPI/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=rentalDB;User Id=postgres;Password=8687131821;"
   }
 }
